--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,6 +65,7 @@
 
     <style name="TryAndRemoveTheme.Swipe.Item" parent="">
         <item name="android:layout_margin">8dp</item>
+        <item name="android:scaleType">center</item>
     </style>
 
 </resources>
