--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -15,15 +15,25 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="de.poeschl.apps.tryandremove.fragments.PrivatePolicyFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="de.poeschl.apps.tryandremove.fragments.PrivatePolicyFragment">
 
 
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/private_policy_layout_policy_webView"
-        android:layout_gravity="center"/>
+        android:id="@+id/webView_layout_policy_webView"
+        android:layout_gravity="center" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/webView_layout_progressbar"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
+
 </FrameLayout>
