--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="appList_bottomRightButton_margin">5dp</dimen>
     <dimen name="navigation_drawer_title_offset">72dp</dimen>
     <dimen name="navigation_drawer_side_offset">16dp</dimen>
+    <dimen name="ad_banner_height">52dp</dimen>
 
     <integer name="animation_duration_activities">300</integer>
     <integer name="animation_fast_duration_activities">200</integer>
